fix scrollbar dark mode in opds catalog list (issue #2182)

--- a/src/renderer/assets/styles/components/catalogs.scss
+++ b/src/renderer/assets/styles/components/catalogs.scss
@@ -283,6 +283,28 @@
     position: absolute;
     padding-right: 25px;
 
+    &::-webkit-scrollbar {
+        width: 12px;
+        transition: 200ms;
+    
+        &-thumb {
+            background-color: var(--scrollbar-thumb);
+            border-radius: 6px;
+            border-left: 2px solid transparent;
+            background-clip: padding-box;
+            cursor: pointer;
+    
+            &:hover {
+              border: 0;
+            }
+    
+        }
+    
+        &-track {
+            background-color: var(--color-secondary);
+            }
+      }
+
     .loader {
         margin: 20%;
     }
